RESOLVED FIXED235990
[JSC] wasm atomic opcodes should be rejected if alignment is not equal to natural width
https://bugs.webkit.org/show_bug.cgi?id=235990
Summary [JSC] wasm atomic opcodes should be rejected if alignment is not equal to nat...
Yusuke Suzuki
Reported 2022-02-01 17:04:28 PST
[JSC] wasm atomic opcodes should be rejected if alignment is not equal to natural width
Attachments
Patch (11.96 KB, patch)
2022-02-01 17:06 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2022-02-01 17:06:56 PST
EWS
Comment 2 2022-02-02 00:23:54 PST
Committed r288945 (246675@main): <https://commits.webkit.org/246675@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450593 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-02 00:24:18 PST
Note You need to log in before you can comment on or make changes to this bug.