[JSC] wasm atomic opcodes should be rejected if alignment is not equal to natural width https://bugs.webkit.org/show_bug.cgi?id=235990

Reviewed by Saam Barati.

JSTests:

* wasm/stress/invalid-atomic-alignment.js: Added.
(async buildAndThrow):

Source/JavaScriptCore:

While normal load and store can accept larger alignment than an access width,
wasm module validator rejects if atomic ops' alignment is not equal to an access width.
This patch applies this restriction.
No runtime semantics change since atomic ops are always checked against an access width alignment.

* wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::atomicLoad):
(JSC::Wasm::FunctionParser<Context>::atomicStore):
(JSC::Wasm::FunctionParser<Context>::atomicBinaryRMW):
(JSC::Wasm::FunctionParser<Context>::atomicCompareExchange):
(JSC::Wasm::FunctionParser<Context>::atomicWait):
(JSC::Wasm::FunctionParser<Context>::atomicNotify):
(JSC::Wasm::FunctionParser<Context>::parseUnreachableExpression):



Canonical link: https://commits.webkit.org/246675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288945 268f45cc-cd09-0410-ab3c-d52691b4dbfc